added github.yaml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,10 @@ services:
     volumes:
       - '/app/node_modules'
       - .:/app
-  test:
+  # test:
+  #   build:
+  tests:
+    stdin_open: true
     build:
       context: .
       dockerfile: Dockerfile.dev
